build: :zap: built some ui and set hover to title character

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -94,7 +94,11 @@
     font-size: 18px;
   }
 }
-
+.charName {
+  color: #ffffff;
+  text-align: left;
+  font-size: 24px;
+}
 .circleDead {
   width: 10px;
   height: 10px;
