--- a/styles/Footer.module.scss
+++ b/styles/Footer.module.scss
@@ -9,3 +9,13 @@
         color: rgb(255, 152, 0);
     }
 }
+
+@media (max-width: 55.625em) {
+    .container {
+        flex-direction: column;
+        text-align: center;
+        div {
+            margin: .5rem 0;
+        }
+    }
+}
